fix spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,7 +57,7 @@ h3 {
 
 p {
   font-size: 15px;
-  padding: 10px 65px 10px 0px;
+  padding: 10px 44px 10px 0px;
   letter-spacing: 1.2px;
   font-family: 'Roboto', sans-serif;
 }
